--- a/spring-data-jpa/jpashop-java/src/main/resources/application.yml
+++ b/spring-data-jpa/jpashop-java/src/main/resources/application.yml
@@ -14,6 +14,5 @@ spring:
         format_sql: true
 
 # hibernate? ???? ?? sql? ???? ???.
-logging:
-  level:
-    org.hibernate.SQL: debug
+logging.level: #???? ??
+  org.hibernate.SQL: debug #???? 2?
