--- a/spring-data-jpa/jpashop-kotlin/src/main/resources/application.yml
+++ b/spring-data-jpa/jpashop-kotlin/src/main/resources/application.yml
@@ -13,8 +13,13 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        format_sql: true
+#        format_sql: true
 
 logging:
   level:
-    org.hibernate.SQL: debug
+    org:
+      hibernate:
+        type:
+          descriptor:
+            sql:
+              BasicBinder: TRACE
