--- a/spring-data-jpa/jpashop-kotlin/module-common/src/main/resources/application.yml
+++ b/spring-data-jpa/jpashop-kotlin/module-common/src/main/resources/application.yml
@@ -9,16 +9,18 @@ spring:
     password: 1234
 
   jpa:
-    hibernate:
-      ddl-auto: update
     properties:
       hibernate:
-#        format_sql: true
+        show_sql: false
+        format_sql: true
+    hibernate:
+      ddl-auto: update
 
 logging:
   level:
     org:
       hibernate:
+        SQL: DEBUG
         type:
           descriptor:
             sql:
